# proof-of-observation

./: .gitignore  CONTRIBUTING.md  LICENSE-APACHE  NOTICE  README.md  README.zh-CN.md  SECURITY.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
docs/: TEE.md  proof-of-observation-protocol-v1.md  tee-attestation-demo.html  tee-reproducible-build.md  tee-signing-v2-design.md  tee-verify.html
enclave/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  reproducible-build.sh  signing-vectors.json
enclave/specs/: example-profile.json
enclave/src/: egress_boring.rs  egress_openssl.rs  egress_rustls_aws_lc.rs  h2_client.rs  lib.rs  main.rs  tls_profile.rs
verifier/: .gitignore  README.md  package-lock.json  package.json  signing-vectors.gen.ts  signing-vectors.test.ts  signing.ts  tee-verify-core.test.ts  tee-verify-core.ts  tee-verify-html-capture.test.ts  tee-verify-html-embedded-script.test.ts  tee-verify-html-v2-align.test.ts  tee-verify-proxy.test.ts  tee-verify-proxy.ts  tee-verify-stream.ts  test-cose-browser.mjs  verify-attestation-cose.mjs  verify-attestation-cose.test.mjs  verify-real-bundle.ts
